@@ -1,3 +1,7 @@
+2011-07-08  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer.pm: Fix compuation of npercents and
+	  nexclamations.
+
 2011-07-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* config/ltmain.sh, config/lt~obsolete.m4, config/ltoptions.m4,
 	  config/ltsugar.m4, config/ltversion.m4: Upgrade libtool to 2.4
